@@ -11,8 +11,7 @@ public class PureFunctionsUnitTets {
     @Test
     public void testSortingWithoutLambda() {
 
-        assertEquals(new Integer(18), PureFunctions.sum(Arrays.asList(new Integer(10), new Integer(8))));
-
+        assertEquals(Integer.valueOf(18), PureFunctions.sum(Arrays.asList(10, 8)));
     }
 
 }
